<resources>
    <string name="app_name">极致模式</string>
    <string name="btnEnableTxt">启用极致模式</string>
    <string name="tvStatusTxt">待获取</string>
    <string name="swAutorunTxt">开机自动启用</string>
    <string name="btnjumpTxt">设置自启动权限</string>
    <string name="btnAutoTxt">自动</string>
    <string name="blanceTxt">均衡</string>
    <string name="powersaveTxt">省电</string>
    <string name="performanceTxt">性能</string>
    <string name="fastTxt">极速</string>
    <string name="btnopenycactivity">设置yc模式</string>
    <string name="card_content">由于miui官方把极致模式隐藏了，所以有了本应用，用于启动极致模式。 该模式主要用于开启全局高刷新率\n另有修改yc调度运行模式的功能</string>
    <string name="card_log">2022年5月21日更新：\n\t1.增加隐私协议以满足合规要求\n\t2.删除桌面小部件增加控制中心快捷开关\n\t3.api级别提升到32，改用root权限设置极致模式\n2022年5月12日更新：\n\t1.增加关于页面\n\t2.适配mtk版yc\n2022年5月6日更新：增加修改yc调度运行模式的功能</string>
    <string name="card_Qa">问:如何判断极致模式是否生效？\n答:打开开发者选项里的显示屏幕刷新率，然后打开抖音、地图、相机等原本锁60Hz的应用，看是否变为高刷新率。\n\n问:支持什么机型？\n答:必须是官方有内置极致模式代码的机型。\n\n问:需要root吗？\n答:开启关闭极致模式不需要（3.3.0以上版本需要），修改yc运行模式需要\n\n问:开启了，但温度上去后锁帧，怎么办？\n答:此情况，极致模式不能解决，需要改温控，酷安搜索下载《淦！MIUI温控》，并且禁用冻结joyose。\n\n问:已经淦掉温控和禁用joyose，部分游戏仍然锁60Hz,怎么办？\n答:怀疑MIUI新增加的限制，这个问题目前临时的解决办法就是：隐藏小白条，进游戏后，上滑出现小白条，刷新率会自动变为高刷\n\n问:需要挂后台吗?\n答:不需要挂后台，但极致模式重启后会自动失效，如需开机后自动开启极致模式，请运行app自启动。\n\n问:设置yc运行模式会对yc有副作用吗？\n答:该功能使用yc官方的方式进行修改运行模式，对yc无副作用。
    </string>
    <string name="btnabouttxt">关于</string>
    <string name="privacyStr">1.本应用不收集任何用户信息\n2.本应用不需要，且不具备联网权限\n3.如有变动，会告知</string>
</resources>